--- a/style/basic_style.css
+++ b/style/basic_style.css
@@ -1,6 +1,12 @@
+html{
+	position: relative;
+	min-height: 100%;
+}
 body{
+	margin-bottom: 162px;
 	font-family: 'Open Sans', sans-serif;
 	background: url(./../images/background.png) repeat;
+	background-color: #2a2c38;
 	padding-right: 0!important;
 }
 .margin-left{
@@ -76,6 +82,10 @@ body{
 }
 .tournament-container{
 	margin-bottom: 30px;
+	visibility: hidden;
+}
+.tournament-container.visable{
+	visibility: visible;
 }
 .tournament-container .tournament-title{
 	margin: 0 0 15px 0;
@@ -108,14 +118,20 @@ body{
 	float: left;
 }
 .tournament-container ul{
-	margin: 0;
+	margin: 0 0 10px 0;
 }
 .tournament-container ul li{
+	height: 30px;
 	margin: 0 0 60px 0;
 }
 .tournament-container ul li a{
 	text-decoration: none;
 	color: #333;
+}
+.tournament-container ul li .tournament-icons{
+	width: 68px;
+	height: 32px;
+	display: inline-block;
 }
 .tournament-container ul li img{
 	margin: 0;
@@ -130,6 +146,20 @@ body{
 }
 .tournament-container ul li div p{
 	margin: 0 15px 5px 0;
+}
+.tournament-pages span{
+	width: 25px;
+	height: 25px;
+	margin: 0 10px 10px 0;
+	padding: 3px 0 0 0;
+	background: #363636;
+}
+.tournament-pages span:hover, .tournament-pages a.active span{
+	background: #e43f3f;
+}
+.tournament-pages span a{
+	text-decoration: none;
+	color: #fff;
 }
 .menu-box{
 	top: 55px;
@@ -213,9 +243,9 @@ body{
 }
 .dropdown-submenu>.dropdown-menu li:first-of-type div img{
 	border: none;
-    width: 64px;
-    top: 25%;
-    left: 30%;
+	width: 64px;
+	top: 25%;
+	left: 30%;
 }
 .background-cover{
 	width: 100%;
@@ -349,6 +379,7 @@ body{
 	padding: 0 10px 20px 10px;
 	background: #fff;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 #alert .menu-box h6{
 	padding: 0 0 5px 0;
@@ -357,6 +388,7 @@ body{
 }
 #alert .menu-box ul{
 	max-height: 172px;
+	margin: 0;
 	overflow-y: auto; 
 }
 #alert .menu-box ul li{
@@ -380,11 +412,22 @@ body{
 }
 #alert .menu-box ul li img{
 	max-width: 100%;
+	top: 50%;
+	right: 10px;
 	margin: 0;
-	float: right;
-	display: inline-block;
-	vertical-align: top;
+	position: absolute;		
+	transform: translateY(-50%);
 	opacity: 0.5;
+}
+#alert .menu-box ul li div button{
+	background: #fff;
+	border: none;
+	outline: none;
+	font-weight: bold;
+}
+#alert .menu-box ul li div button:hover{
+	background: #e43f3f;
+	color: #fff;
 }
 .pointer{
 	cursor: pointer;
@@ -392,21 +435,52 @@ body{
 .login-wrapper, .register-wrapper{
 	top: 100px;
 }
-.login{
+.login::after {
+	content: "";
+	width: 100%;
 	height: 200px;
-	background: #363636;
+	top: 305px;
+	right: 0;
+	background: url(./../images/login-bg.png) no-repeat;
+	opacity: 0.7;
+	position: absolute;
+	z-index: -1;	 
+}
+.login>div>div:first-of-type{
+	padding: 0;
+}
+.login>div>div:nth-of-type(2){
+	margin-top: -85px;
+}
+.logo{
+	height: 200px;
+	background: url(./../images/logo.png) no-repeat;
+	background-size: contain;
 }
 .login-text{
 	width: 170px;
 	height: 40px;
 	background: #fff;
-	margin: 85px auto 0 auto;
-	padding-top: 5px;
+	margin: 0 auto;
+	padding-top: 6px;
 	font-weight: bold;
 	line-height: 2;
 }
 .login-text:hover{
 	background: #1182f5;
+	color: #fff;
+}
+.bottom-text{
+	margin-top: -45px;
+}
+.bottom-text h2{
+	width: 200px;
+	padding: 5px 0;
+	margin: 20px auto 0 auto;
+	display: block;
+	background: #E43F3F;
+	font-size: 14px;
+	font-weight: bold;
 	color: #fff;
 }
 .covering-box h2{
@@ -488,8 +562,8 @@ body{
 }
 .covering-box form #createTeamTooltip{
 	margin: 17px 0 0 -30px;
-    position: absolute;
-    color: #fff;
+	position: absolute;
+	color: #fff;
 }
 .covering-box form #forgotPassword{
 	margin-right: 3%;
@@ -596,13 +670,13 @@ body{
 }
 .friends-wrapper a h4:after {
 	font-family: 'Glyphicons Halflings';
-	font-size: 14px;  
+	font-size: 14px;	
 	content: "\e114"; 
-	float: right;        
-	color: grey;  
+	float: right;				
+	color: #333;	
 }
 .friends-wrapper a.collapsed h4:after {
-	content: "\e080";   
+	content: "\e080";	 
 }
 .friends-header:hover{
 	color: #E43F3F;
@@ -1070,7 +1144,6 @@ p.chat-panel-message{
 .social{
 	height: 50px;
 	border-top: 3px solid #e43f3f;
-	border-bottom: 1px solid #d8d8d8;
 }
 .social-list-group{
 	height: 27px;
@@ -1093,7 +1166,6 @@ li.social-list img{
 }
 .main{
 	background: #fff;
-	margin-top: 15px;
 	margin-bottom: 50px;
 	border-top: 3px solid #e43f3f;
 	border-bottom: 3px solid #e43f3f;
@@ -1104,6 +1176,9 @@ li.social-list img{
 	padding: 30px 20px;
 }
 .footer{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 	background: #363636;
 	border-top: 5px solid #e43f3f;
 }
@@ -1135,7 +1210,7 @@ li.social-list img{
 	margin: -5px 0 0 0;
 }
 #errorContainer { 
-    position: fixed; 
+	position: fixed; 
 }
 @media screen and (min-width: 480px){
 	.menu-box{
@@ -1152,6 +1227,9 @@ li.social-list img{
 	}
 	.covering-box form input[type="submit"]{
 		width: 33.33%; 
+	}
+	.login>div>div:nth-of-type(2){
+		margin-top: -200px;
 	}
 @media screen and (min-width: 640px){
 	.social-list:nth-child(1){
@@ -1173,6 +1251,9 @@ li.social-list img{
 		width: 100%;
 	}
 @media screen and (min-width: 768px){
+	body{
+		margin-bottom: 60px;
+	}
 	.xs-pull-right{
 		width: auto;
 		float: right;
@@ -1201,7 +1282,20 @@ li.social-list img{
 	#user>ul {
 		left: 25%;
 	}
+	.login div div:nth-of-type(2){
+		height: 200px;
+		margin-top: 0;
+	}
+	.login-text{
+		top: 50%;
+		right: 5%;
+		margin-top: -30px;
+		position: absolute;
+	}
 @media screen and (min-width: 990px){
+	.login::after {
+		top: 54px;	 
+	}
 	.alert-box-wrapper{
 		top: 50px;
 	}
@@ -1266,11 +1360,7 @@ li.social-list img{
 		margin-left: -1px;
 	}
 	.login{
-		height: 255px;
-		background: #363636;
-	}
-	.login-text{
-		margin: 135px 0 0 15px;
+		margin-top: 54px;
 	}
 	.border-bottom:hover{
 		box-shadow: 0 5px 0 #fff;
@@ -1310,6 +1400,14 @@ li.social-list img{
 	}
 	.covering-box form #forgotPassword{
 		margin-right: 15%;
+	}
+	.tournament-pages span{
+		margin: 0 10px 0 0;
+	}
+	.login-text{
+		right: 33%;
+		margin-top: -15px;
+		position: absolute;
 	}
 }
 @media screen and (min-width: 1024px){
@@ -1354,9 +1452,7 @@ li.social-list img{
 	}
 }
 @media screen and (min-width: 1280px){
-	.login-text{
-		margin: 135px 0 0 45px;
-	}
+
 }
 @media screen and (min-height: 910px){
 	#registerContainer{
