--- a/style/basic_style.css
+++ b/style/basic_style.css
@@ -440,7 +440,7 @@ body{
 	width: 100%;
 	height: 200px;
 	top: 305px;
-	right: 0;
+	left: 0;
 	background: url(./../images/login-bg.png) no-repeat;
 	opacity: 0.7;
 	position: absolute;
@@ -539,7 +539,7 @@ body{
 .covering-box form input[type="checkbox"]:checked + label span{
 	background:url(./../images/checkbox-blue.png) left top no-repeat;
 }
-.covering-box form input[type="checkbox"]#acceptNewTeam + label span {
+.covering-box form input[type="checkbox"]#acceptNewTeam + label span, .covering-box form input[type="checkbox"]#acceptNewTeamTerms + label span {
 	margin: 0 0 -3px 5px;
 }
 .covering-box form input[type="checkbox"]#acceptTerms + label span {
