--- a/style/games_style.css
+++ b/style/games_style.css
@@ -38,7 +38,7 @@
 .game-page.game-payment-wrapper form>div:last-of-type{
 	border-bottom: none;
 }
-.game-page form>div, .to-choose div{
+#chooseTeamForm>div, .to-choose div, #checkPlayersForm>div{
 	margin: 5px 0 0 0;
 }
 .game-page form label{
@@ -48,7 +48,7 @@
 .game-page form label.terms{
 	font-style: italic;
 }
-.game-page.covering-box form input[type="submit"], #chooseTeamForm input[type="submit"]{
+#chooseTeamForm input[type="submit"], #createGameIdForm input[type="submit"], #checkPlayersForm input[type="submit"]{
 	margin: 30px 16px;
 	float: right;
 	cursor: pointer;
